[project]
name = "blog-data-quality-common"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "databricks-connect==16.4.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.4",
    "black==25.11.0",
    "databricks-connect>=15.4,<15.5",
]

[project.scripts]
main = "data_quality.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
